WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79658
[Qt] Fixed incorrect size pixmap creation for a new transparency layer.
https://bugs.webkit.org/show_bug.cgi?id=79658
Summary
[Qt] Fixed incorrect size pixmap creation for a new transparency layer.
Dongseong Hwang
Reported
2012-02-27 03:47:06 PST
If QPainter does not have clipping, beginPlatformTransparencyLayer can create wrong size pixmap, so it causes incorrect rendering.
Attachments
patch
(1.85 KB, patch)
2012-02-27 03:48 PST
,
Dongseong Hwang
no flags
Details
Formatted Diff
Diff
patch v.2
(2.69 KB, patch)
2012-02-27 03:52 PST
,
Dongseong Hwang
hausmann
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dongseong Hwang
Comment 1
2012-02-27 03:48:24 PST
Created
attachment 129005
[details]
patch
Dongseong Hwang
Comment 2
2012-02-27 03:52:25 PST
Created
attachment 129006
[details]
patch v.2
Dongseong Hwang
Comment 3
2012-02-27 17:02:19 PST
Bug 79659
waits for this patch.
Simon Hausmann
Comment 4
2012-03-01 07:58:31 PST
(In reply to
comment #3
)
>
Bug 79659
waits for this patch.
Then let's make it blocking :)
WebKit Review Bot
Comment 5
2012-03-01 08:02:14 PST
Comment on
attachment 129006
[details]
patch v.2 Rejecting
attachment 129006
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/11770496
Simon Hausmann
Comment 6
2012-03-01 08:13:46 PST
Committed
r109347
: <
http://trac.webkit.org/changeset/109347
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug