[Qt] Fixed incorrect size pixmap creation for a new transparency layer. https://bugs.webkit.org/show_bug.cgi?id=79658

If QPainter does not have clipping, beginPlatformTransparencyLayer can create
wrong size pixmap, so it causes incorrect rendering.

Patch by Huang Dongsung <luxtella@company100.net> on 2012-03-01
Reviewed by Simon Hausmann.

* platform/graphics/qt/GraphicsContextQt.cpp:
(WebCore::GraphicsContext::beginPlatformTransparencyLayer):

Canonical link: https://commits.webkit.org/97096@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109347 268f45cc-cd09-0410-ab3c-d52691b4dbfc